fixed break in title and republish

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -63,6 +63,10 @@
     font-size: 1.8em;
     line-height: 1em;
     margin-bottom: 0;
+
+    .break {
+      display: block;
+    }
   }
 
   .secondary {
